feat: Added the modul name of "Programmieren - Grundlegende Konzepte"

--- a/latex/schedule/1-semester.ltx
+++ b/latex/schedule/1-semester.ltx
@@ -33,7 +33,7 @@
 \item Übungen in der A-Woche Montags in der 4. Doppelstunde und in der B-Woche Mittwochs in der 2. Doppelstunde
 \end{itemize}
 
-\section{Programmieren - Grundlegende Konzepte}
+\section{Programmieren - Grundlegende Konzepte (PR10)}
 \begin{itemize}
 \item Vorlesung Montags in der 6. Doppelstunde über Zoom
 \item Übung Mittwochs in der 5. Doppelstunde
