--- a/latex/an10/ha01.tex
+++ b/latex/an10/ha01.tex
@@ -71,7 +71,7 @@
     (a + b) + ((-a) + (-b)) &= 0 \\
   \end{align*}
 
-  Also ist $(-a) + (-b)$ ein additives inverses Element von $a + b$. Aus (b)
+  Also ist $(-a) + (-b)$ ein additives inverses Element von $a + b$. Aus Lemma (b)
   (\emph{``Es gibt nur ein additives Inverses''}) folgt:
 
   \[
@@ -88,7 +88,7 @@
     (-a) * -a^{-1} &= 1 \\
   \end{align*}
 
-  Somit ist $-(a^{-1})$ ein multiplikatives Inverses von $(-a)$ und aus (b)
+  Somit ist $-(a^{-1})$ ein multiplikatives Inverses von $(-a)$ und aus Lemma (b)
   (\emph{``Es gibt nur ein additives Inverses''}) folgt:
   \[
     (-a)^{-1} = -a^{-1}
@@ -96,7 +96,7 @@
 
 \item Beweisen Sie, dass für alle $a, b \in \mathbb{R}, a \ne 0$ gilt: $a * x = b$ \\
 
-  Sei $a = a^{-1} * b$, dann gilt
+  Sei $x = a^{-1} * b$, dann gilt
   \begin{align*}
     a * x &= a * (a^{-1} * b) \\
           \overset{\text{(A5)}}&{=} (a * a^{-1}) * b \\
@@ -137,6 +137,7 @@ In der Menge $\mathbb{R}$ der reellen Zahlen werden zwei Operatoren $\oplus, \od
 Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus der Vorlesung erfüllt sind.
 
 \begin{enumerate}[label=(A\arabic*)]
+%% A1
 \item
   \begin{align*}
     a \oplus (b \oplus c) &= a + (b \oplus c) + 1 \\
@@ -151,7 +152,11 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
 
   Somit ist $a \oplus (b \oplus c) = (a \oplus b) \oplus c$
 
-\item $\exists \mathbb{O} \forall a \in \mathbb{R} \colon a \oplus \mathbb{O} = a$
+%% A2 
+\item Sei $\mathbb{O} \in \mathbb{R}$ neutrales Element der Operation $\oplus$, dann soll gelten:
+
+  $\exists \mathbb{O} \forall a \in \mathbb{R} \colon a \oplus \mathbb{O} = a$
+
   \begin{align*}
     a \oplus \mathbb{O} &= a \\
     a + \mathbb{O} + 1 &= a\\
@@ -162,7 +167,8 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
   Somit existiert ein neutrales Element $\mathbb{O} \in \mathbb{R}$ als inverses Element von $1$ für welches gilt
   $a \oplus \mathbb{R} = a$.
 
-\item $\forall a \in \mathbb{R} \exists -a \in \mathbb{R} \colon a \oplus (-a)' = 0$ \\
+%% A3
+\item $\forall a \in \mathbb{R} \exists (-a=)' \in \mathbb{R} \colon a \oplus (-a)' = 0$ \\
 
   \begin{align*}
     a \oplus (-a)' &= 0 \\
@@ -174,8 +180,20 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
   \end{align*}
 
   Somit existiert ein inverses Element $(-a)' \in \mathbb{R}$ als $(-a) + (-1)$ für welches gilt
-  $a \oplus (-a)' = 0$
+  $a \oplus (-a)' = 0$ \\
 
+  Alternativ für $\forall a \in \mathbb{R} \exists (-a=)' \in \mathbb{R} \colon a \oplus (-a)' = 0$
+
+  \begin{align*}
+    a \oplus (-a)' &= \mathbb{O} \\
+    a + (-a)' + 1 &= -1 \\ 
+    a + (-a) + (-a)' + 1 \underset{\substack{\text{Addition des Inversen von} \\ a \text{ auf beiden Seiten}}}&{=} (-1) + (-a)\\
+    (-a)' + 1 &= (-1) + (-a) \\
+    (-a)' + (-1) \underset{\substack{\text{Addition des Inversen von} \\ 1 \text{ auf beiden Seiten}}}&{=} (-1) + (-a) + (-1)\\
+    (-a)' &= (-a) + (-2) \\
+  \end{align*}
+
+%% A4
 \item
   \begin{align*}
     a \oplus b &= b \oplus a \\
@@ -183,6 +201,7 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
     a + b + 1 &\overset{\text{(A4)}}&{=} a + b + 1 \\
   \end{align*}
 
+%% A5
 \item $\forall a,b,c \in \mathbb{R} \colon (a \odot b) \odot c = a \odot (b \odot c)$
   \begin{align*}
     (a \odot b) \odot c &= a \odot (b \odot c) \\
@@ -192,7 +211,8 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
     (a + b + c) + a * b + a * c + b * c + a * b * c \overset{\text{(A9)}}&{=} (a + b + c) + b * c + a * b + a * c + a* b * c \\
     (a + b + c) + a * b + a * c + b * c + a * b * c \overset{\text{(A4)}}&{=} (a + b + c) + a * b + a * c + b * c + a * b * c \\
   \end{align*}
-  
+
+%% A6
 \item $\exists \mathit{1} \in \mathbb{R} \forall a \in \mathbb{R} \colon a \odot \mathit{1} = a$ \\
 
   \begin{align*}
@@ -209,21 +229,36 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
   Somit existiert ein neutrales Element $\mathit{1} \in \mathbb{R}$ als $0$ für welches gilt
   $a \odot \mathit{1} = a$
 
-\item $\forall a \in \mathbb{R}, a \ne 0 \exists \mathbbm{a}^{-1} \in \mathbb{R} \colon a \odot \mathbbm{a}^{-1} = 1$ \\
-
+%% A7
+\item $\forall a \in \mathbb{R}, a \ne 0 \exists \mathbbm{a}^{-1} \in \mathbb{R} \colon a \odot \mathbbm{a}^{-1} = 1$
+  
   \begin{align*}
     a \odot \mathbbm{a}^{-1} &= 1 \\
     a + \mathbbm{a}^{-1} + a * \mathbbm{a}^{-1} &= 1 \\
     a + \mathbbm{a}^{-1} * (1 + a) \overset{\text{(A9)}}&{=} 1 \\
     a + (-a) + \mathbbm{a}^{-1} * (1 + a) \underset{\substack{\text{Addition des Inversen von} \\ a \text{ auf beiden Seiten}}}&{=} 1 + (-a) \\
     \mathbbm{a}^{-1} * (1 + a) &= 1 - a \\
-    \mathbbm{a}^{-1} * (1 + a) * (1 + a)^{-1} \underset{\substack{\text{Multiplikation des Inversen von} \\ (1+a) \text{ auf beiden Seiten}}}&{=} (1 + a) * (1 + a)^{-1} \\
-    \mathbbm{a}^{-1} &= (1 + a) * (1 + a)^{-1} \\
+    \mathbbm{a}^{-1} * (1 + a) * (1 + a)^{-1} \underset{\substack{\text{Multiplikation des Inversen von} \\ (1+a) \text{ auf beiden Seiten}}}&{=} (1 - a) * (1 + a)^{-1} \\
+    \mathbbm{a}^{-1} &= (1 - a) * (1 + a)^{-1} \\
   \end{align*}
 
   Somit existiert ein inverses Element $\mathbbm{a}^{-1} \in \mathbb{R}$ als $(1 + a) * (1 + a)^{-1}$ für welches gilt
-  $a \odot \mathbbm{a}^{-1} = 1$
+  $a \odot \mathbbm{a}^{-1} = 1$ \\
 
+  Alternativ für $\forall a \in \mathbb{R}, a \ne 0 \exists \mathbbm{a}^{-1} \in \mathbb{R} \colon a \odot \mathbbm{a}^{-1} = \mathit{1}$
+
+  \begin{align*}
+    a \odot \mathbbm{a}^{-1} &= \mathit{1} \\
+    a \odot \mathbbm{a}^{-1} &= 0 \\
+    a + \mathbbm{a}^{-1} + a * \mathbbm{a}^{-1} &= 0 \\
+    a + \mathbbm{a}^{-1} * (1 + a) \overset{\text{(A9)}}&{=} 0 \\
+    a + (-a) + \mathbbm{a}^{-1} * (1 + a) \underset{\substack{\text{Addition des Inversen von} \\ a \text{ auf beiden Seiten}}}&{=} (-a) \\
+    \mathbbm{a}^{-1} * (1 + a) &= 1 - a \\
+    \mathbbm{a}^{-1} * (1 + a) * (1 + a)^{-1} \underset{\substack{\text{Multiplikation des Inversen von} \\ (1+a) \text{ auf beiden Seiten}}}&{=} (-a) * (1 + a)^{-1} \\
+    \mathbbm{a}^{-1} &= (-a) * (1 + a)^{-1} \\
+  \end{align*}
+
+%% A8
 \item $\forall a,b \in \mathbb{R} \colon a \odot b = b \odot a$
   \begin{align*}
     a \odot b &= b \odot a \\
@@ -232,13 +267,14 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
     a + b + a * b \overset{\text{(A8)}}&{=} a + b + a * b \\
   \end{align*}
 
+%% A9
 \item $\forall a,b,c \in \mathbb{R} \colon (a \oplus b) \odot c = a \odot c \oplus b \odot c$
 
   \begin{align*}
     (a \oplus b) \odot c &= a \odot c \oplus b \odot c \\
     (a + b + 1) \odot c &= a \odot c + b \odot c + 1 \\
-    (a + b + 1) + c + (a + b + 1) * c &= a + c + a * c + b + c * b + 1 \\
-    (a + b + 1) + c + a * c + b * c + c \overset{\text{(A9)}}&{=} a + c + a * c + b + c * b + 1 \\
+    (a + b + 1) + c + (a + b + 1) * c &= a + c + a * c + b + c + b * c + 1 \\
+    (a + b + 1) + c + a * c + b * c + c \overset{\text{(A9)}}&{=} a + c + a * c + b + c + b * c + 1 \\
     a + b + c + c + a * c + b * c + 1 \overset{\text{(A4)}}&{=} a + b + c + c + a * c + b * c + 1 \\
   \end{align*}
 \end{enumerate}
@@ -264,7 +300,7 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
 \vrule
 \hfill
 \begin{minipage}[t]{.45\textwidth}
-  \textbf{Fall 1}: $x < 1$ \\
+  \textbf{Fall 2}: $x < 1$ \\
   \begin{align*}
     -(x - 1) &< 2 \\
     -x + 1) &< 2 &&| -1 \\
@@ -303,7 +339,7 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
   A \setminus B &= \interval[open]{-1}{3} \setminus \interval[open]{-8}{\infty} \\
            &= \emptyset \\
   \\
-  A \cup B &= \interval[open]{-1}{3} \cap \interval[open left]{-8}{-1} \\
+  A \cup C &= \interval[open]{-1}{3} \cap \interval[open left]{-8}{-1} \\
            &= \emptyset \\
   \\
   B \setminus C &= \interval[open]{-8}{\infty} \setminus \interval[open left]{-8}{-1} \\
