fix: Alternative solution for A6

--- a/latex/an10/ha01.tex
+++ b/latex/an10/ha01.tex
@@ -182,7 +182,7 @@ Zeigen Sie, dass für $(\mathbb{R}, \oplus, \odot)$ die Axiome (A1) bis (A9) aus
   Somit existiert ein inverses Element $(-a)' \in \mathbb{R}$ als $(-a) + (-1)$ für welches gilt
   $a \oplus (-a)' = 0$ \\
 
-  Alternativ für $\forall a \in \mathbb{R} \exists (-a=)' \in \mathbb{R} \colon a \oplus (-a)' = 0$
+  Alternativ für $\forall a \in \mathbb{R} \exists (-a=)' \in \mathbb{R} \colon a \oplus (-a)' = \mathbb{O}$
 
   \begin{align*}
     a \oplus (-a)' &= \mathbb{O} \\
