feat: Further clarified authors

--- a/latex/an10/ha01.tex
+++ b/latex/an10/ha01.tex
@@ -20,7 +20,7 @@
 \usepackage{xcolor}
 \definecolor{light-gray}{gray}{.9}
 
-\author{Lukas Kamratzki \\ Karsten Lehmann}
+\author{Lisa Würzebesser (4981474) HA-02 \\ Lukas Kamratzki (3752330) HA-04 \\ Karsten Lehmann (4935758) HA-01}
 \date{01.11.2020}
 \title{Hausaufgabe 01 Analysis - Grundlegende Konzepte}
 
