feat: Updated schedule

--- a/latex/schedule/1-semester.tex
+++ b/latex/schedule/1-semester.tex
@@ -12,7 +12,7 @@
     1. Doppelstunde \newline 07:30 - 09:00 & & & & & \\ \hline
     2. Doppelstunde \newline 09:20 - 10:50 & & & Übung Analysis - Grundlegende Konzepte \newline Woche B & & \\ \hline
     3. Doppelstunde \newline 11:10 - 12:40 & & Vorlesung Lineare Algebra - Grundlegende Konzepte & & & \\ \hline
-    4. Doppelstunde \newline 13:00 - 14:30 & Übung Analysis - Grundlegende Konzepte \newline Woche A & Übung Lineare Algebra - Grundlegende Konzepte & & & Vorlesung Grundlagen der Linearen Algebra \\ \hline
+    4. Doppelstunde \newline 13:00 - 14:30 & Übung Analysis - Grundlegende Konzepte \newline Woche A & Übung Lineare Algebra - Grundlegende Konzepte & & & Vorlesung Lineare Algebra - Grundlegende Konzepte \\ \hline
     5. Doppelstunde \newline 14:50 - 16:20 & & & Übung Programmieren - Grundlegende Konzepte & & \\ \hline
     6. Doppelstunde \newline 16:40 - 18:10 & Vorlesung Programmieren - Grundlegende Konzepte & & & & \\ \hline
     7. Doppelstunde \newline 18:30 - 20:00 & & & & & \\ \hline
@@ -24,13 +24,15 @@
 \section{Lineare Algebra - Grundlegende Konzepte (LA10)}
 \begin{itemize}
 \item Vorlesung Dienstags in der 3. Doppelstunde über Zoom oder \href{https://www.youtube.com/playlist?list=PLRSw__8ivrImDYFW1gudAYk1Xw29y01zB}{YouTube}
-\item Übung Dienstags in der 4. Doppelstunde
+\item Übung Dienstags in der 4. Doppelstunde (Online)
 \end{itemize}
 
 \section{Analysis - Grundlegende Konzepte (AN10)}
 \begin{itemize}
 \item Vorlesungen asynchron auf \href{https://videocampus.sachsen.de/album/view/aid/75}{Videocampus Sachsen} oder \href{https://www.youtube.com/playlist?list=PL_KzTEQSuCExpKKzITYo_CG95qr94sZqS}{YouTube}
-\item Übungen in der A-Woche Montags in der 4. Doppelstunde und in der B-Woche Mittwochs in der 2. Doppelstunde
+\item Übung in der A-Woche Montags in der 4. Doppelstunde
+\item Übung in der B-Woche Mittwochs in der 2. Doppelstunde (WIL/B122/U)
+\item \textbf{Übungsblätter!!}
 \end{itemize}
 
 \section{Programmieren - Grundlegende Konzepte (PR10)}
